Add exports field to package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "main": "index.js",
   "types": "index.d.ts",
+  "exports": {
+    ".": "./index.js"
+  },
   "files": [
     "index.js",
     "index.d.ts",
