--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "files": [
     "index.js",
     "index.d.ts",
-    "index.d.ts.map"
+    "index.d.ts.map",
+    "lib/utils.js",
+    "lib/utils.d.ts",
+    "lib/utils.d.ts.map"
   ],
   "scripts": {
     "build:0": "run-s clean",
@@ -41,14 +44,12 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
-    "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.19.5",
     "@voxpelli/eslint-config": "9.0.0",
     "@voxpelli/eslint-config-jsdoc-ts": "^0.3.1",
     "c8": "^7.3.5",
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "dependency-check": "^4.1.0",
     "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.2",
