--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "linemod-core",
   "version": "0.1.1",
-  "description": "Comment driven instructions to modify lines",
+  "description": "Comment driven line modifications",
   "homepage": "http://github.com/voxpelli/linemod-core",
   "repository": {
     "type": "git",
