--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,3 +1,8 @@
+env: {}
+
+# FILE GENERATED WITH: npx ghat voxpelli/ghatemplates/lint
+# SOURCE: https://github.com/voxpelli/ghatemplates
+
 name: Linting
 
 on:
@@ -10,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: '12'
-      - run: npm install
-      - run: npm run check
+          node-version: '14'
+      - run: yarn install
+      - run: yarn run check
