--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,9 +1,13 @@
-name: Node CI
+env: {}
 
+# FILE GENERATED WITH: npx ghat voxpelli/ghatemplates/nodejs
+# SOURCE: https://github.com/voxpelli/ghatemplates
+# OPTIONS: {"set":["jobs.test.strategy.matrix.node_version=[12,14,15]"]}
+
+name: Node CI
 on:
   - push
   - pull_request
-
 jobs:
   test:
     name: Node ${{ matrix.node_version }} on ${{ matrix.os }}
@@ -11,14 +15,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: [12, 14]
-        os: [ubuntu-latest, windows-latest]
-
+        node_version:
+          - 12
+          - 14
+          - 15
+        os:
+          - ubuntu-latest
+          - windows-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node_version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node_version }}
-    - run: npm install
-    - run: npm run test-ci
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node_version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node_version }}
+      - run: yarn install
+      - run: yarn run test-ci
