--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "clean:declarations": "rm -rf $(find . -maxdepth 2 -type f -name '*.d.ts')",
     "clean": "run-p clean:*",
     "prepublishOnly": "run-s build",
+    "sync-gh-actions:lint": "ghat voxpelli/ghatemplates/lint",
+    "sync-gh-actions:nodejs": "ghat voxpelli/ghatemplates/nodejs --set jobs.test.strategy.matrix.node_version=\\[12,14,15\\]",
+    "sync-gh-actions": "run-p sync-gh-actions:*",
     "test:mocha": "c8 --reporter=lcov --reporter text mocha 'test/**/*.spec.js'",
     "test-ci": "run-s test:*",
     "test": "run-s check test:*"
@@ -61,6 +64,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unicorn": "^24.0.0",
+    "ghat": "^0.14.0",
     "installed-check": "^4.0.0",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
