--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "test-ci": "run-s test:*",
     "test": "run-s check test:*"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
+  },
   "keywords": [],
   "author": "Pelle Wessman <pelle@kodfabrik.se> (http://kodfabrik.se/)",
   "license": "MIT",
@@ -65,6 +70,7 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unicorn": "^24.0.0",
     "ghat": "^0.14.0",
+    "husky": "^4.3.8",
     "installed-check": "^4.0.0",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
