--- a/package.json
+++ b/package.json
@@ -54,21 +54,21 @@
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/node": "^12.19.16",
-    "@voxpelli/eslint-config": "10.0.0",
-    "@voxpelli/eslint-config-jsdoc-ts": "^0.3.1",
+    "@voxpelli/eslint-config": "^14.0.4",
     "c8": "^7.5.0",
     "chai": "^4.3.0",
     "dependency-check": "^4.1.0",
-    "eslint": "^7.16.0",
-    "eslint-config-standard": "^16.0.2",
+    "eslint": "^8.15.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-es": "^4.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^30.7.9",
-    "eslint-plugin-mocha": "^8.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^24.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.2.9",
+    "eslint-plugin-mocha": "^10.0.4",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-security": "^1.5.0",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "eslint-plugin-unicorn": "^42.0.0",
     "ghat": "^0.14.0",
     "husky": "^4.3.8",
     "installed-check": "^4.0.0",
