--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:1-declaration": "tsc -p declaration.tsconfig.json",
     "build": "run-s build:*",
     "check:dependency-check": "dependency-check *.js 'test/**/*.js' --no-dev",
-    "check:installed-check": "installed-check",
+    "check:installed-check": "installed-check -i eslint-plugin-jsdoc",
     "check:lint": "eslint .",
     "check:tsc": "tsc",
     "check": "run-s clean && run-p check:*",
@@ -57,7 +57,7 @@
     "@voxpelli/eslint-config": "^14.0.4",
     "c8": "^7.5.0",
     "chai": "^4.3.0",
-    "dependency-check": "^4.1.0",
+    "dependency-check": "^5.0.0-5",
     "eslint": "^8.15.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-es": "^4.1.0",
@@ -71,7 +71,7 @@
     "eslint-plugin-unicorn": "^42.0.0",
     "ghat": "^0.14.0",
     "husky": "^4.3.8",
-    "installed-check": "^4.0.0",
+    "installed-check": "^5.0.0",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.1.3"
