--- a/package.json
+++ b/package.json
@@ -53,8 +53,9 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
-    "@types/node": "^12.19.16",
+    "@types/node": "^14.18.16",
     "@voxpelli/eslint-config": "^14.0.4",
+    "@voxpelli/tsconfig": "^4.0.0",
     "c8": "^7.5.0",
     "chai": "^4.3.0",
     "dependency-check": "^5.0.0-5",
@@ -74,6 +75,6 @@
     "installed-check": "^5.0.0",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.1.3"
+    "typescript": "~4.6.0"
   }
 }
