--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "check:installed-check": "installed-check -i eslint-plugin-jsdoc",
     "check:lint": "eslint .",
     "check:tsc": "tsc",
+    "check:type-coverage": "type-coverage --detail --strict --at-least 100 --ignore-files 'test/*'",
     "check": "run-s clean && run-p check:*",
     "clean:declarations": "rm -rf $(find . -maxdepth 2 -type f -name '*.d.ts')",
     "clean": "run-p clean:*",
@@ -75,6 +76,7 @@
     "installed-check": "^5.0.0",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
+    "type-coverage": "^2.21.1",
     "typescript": "~4.6.0"
   }
 }
