--- a/package.json
+++ b/package.json
@@ -32,16 +32,12 @@
     "check": "run-s clean && run-p check:*",
     "clean:declarations": "rm -rf $(find . -maxdepth 2 -type f -name '*.d.ts*')",
     "clean": "run-p clean:*",
+    "prepare": "husky install",
     "prepublishOnly": "run-s build",
     "sync-gh-actions": "ghat",
     "test:mocha": "c8 --reporter=lcov --reporter text mocha 'test/**/*.spec.js'",
     "test-ci": "run-s test:*",
     "test": "run-s check test:*"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm test"
-    }
   },
   "keywords": [],
   "author": "Pelle Wessman <pelle@kodfabrik.se> (http://kodfabrik.se/)",
@@ -70,7 +66,7 @@
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "eslint-plugin-unicorn": "^42.0.0",
     "ghat": "^0.14.0",
-    "husky": "^4.3.8",
+    "husky": "^8.0.0",
     "installed-check": "^5.0.0",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
