--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "husky": "^8.0.1",
     "installed-check": "^6.0.1",
     "mocha": "^10.0.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.0.1",
     "type-coverage": "^2.21.2",
     "typescript": "~4.6.4"
   }
