--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "run-s build:*",
     "check:dependency-check": "dependency-check *.js 'test/**/*.js' --no-dev",
     "check:installed-check": "installed-check -i eslint-plugin-jsdoc",
-    "check:lint": "eslint .",
+    "check:lint": "eslint --report-unused-disable-directives .",
     "check:tsc": "tsc",
     "check:type-coverage": "type-coverage --detail --strict --at-least 100 --ignore-files 'test/*'",
     "check": "run-s clean && run-p check:*",
