--- a/package.json
+++ b/package.json
@@ -7,18 +7,16 @@
     "type": "git",
     "url": "git://github.com/voxpelli/linemod-core.git"
   },
-  "main": "index.js",
+  "type": "module",
+  "exports": "./index.js",
   "types": "index.d.ts",
-  "exports": {
-    ".": "./index.js"
-  },
   "files": [
     "index.js",
     "index.d.ts",
     "index.d.ts.map",
-    "lib/utils.js",
-    "lib/utils.d.ts",
-    "lib/utils.d.ts.map"
+    "lib/*.js",
+    "lib/*.d.ts",
+    "lib/*.d.ts.map"
   ],
   "scripts": {
     "build:0": "run-s clean",
@@ -48,22 +46,22 @@
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^14.18.21",
-    "@voxpelli/eslint-config": "^14.1.0",
+    "@voxpelli/eslint-config": "^15.0.0",
     "@voxpelli/tsconfig": "^4.0.0",
     "c8": "^7.11.3",
     "chai": "^4.3.6",
     "dependency-check": "^5.0.0-7",
-    "eslint": "^8.18.0",
+    "eslint": "^8.19.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.3.3",
     "eslint-plugin-mocha": "^10.0.5",
-    "eslint-plugin-n": "^15.2.3",
+    "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-security": "^1.5.0",
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
-    "eslint-plugin-unicorn": "^42.0.0",
+    "eslint-plugin-unicorn": "^43.0.1",
     "husky": "^8.0.1",
     "installed-check": "^6.0.1",
     "mocha": "^10.0.0",
