--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "type": "git",
     "url": "git://github.com/voxpelli/linemod-core.git"
   },
+  "keywords": [],
+  "author": "Pelle Wessman <pelle@kodfabrik.se> (http://kodfabrik.se/)",
+  "license": "MIT",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "type": "module",
   "exports": "./index.js",
   "types": "index.d.ts",
@@ -36,16 +42,10 @@
     "test-ci": "run-s test:*",
     "test": "run-s check test:*"
   },
-  "keywords": [],
-  "author": "Pelle Wessman <pelle@kodfabrik.se> (http://kodfabrik.se/)",
-  "license": "MIT",
-  "engines": {
-    "node": "^14.18.0 || >=16.0.0"
-  },
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.0",
-    "@types/node": "^14.18.33",
+    "@types/node": "^16.18.30",
     "@voxpelli/eslint-config": "^15.2.0",
     "@voxpelli/tsconfig": "^6.1.0",
     "c8": "^7.12.0",
