--- a/package.json
+++ b/package.json
@@ -46,18 +46,17 @@
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^16.18.36",
-    "@voxpelli/eslint-config": "^16.0.7",
+    "@voxpelli/eslint-config": "^18.0.0",
     "@voxpelli/tsconfig": "^8.0.0",
     "c8": "^7.13.0",
     "chai": "^4.3.7",
     "dependency-check": "^5.0.0-7",
-    "eslint": "^8.40.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-es": "^4.1.0",
+    "eslint": "^8.42.0",
+    "eslint-plugin-es-x": "^7.1.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^44.2.4",
+    "eslint-plugin-jsdoc": "^46.2.6",
     "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
