--- a/package.json
+++ b/package.json
@@ -46,20 +46,11 @@
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.19.33",
-    "@voxpelli/eslint-config": "^18.0.0",
+    "@voxpelli/eslint-config": "^20.0.0-alpha2",
     "@voxpelli/tsconfig": "^8.0.0",
     "c8": "^8.0.0",
     "chai": "^4.3.7",
-    "eslint": "^8.42.0",
-    "eslint-plugin-es-x": "^7.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^46.2.6",
-    "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-n": "^16.0.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-security": "^1.7.1",
-    "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "eslint-plugin-unicorn": "^47.0.0",
+    "eslint": "^9.3.0",
     "husky": "^8.0.3",
     "installed-check": "^7.1.1",
     "knip": "^2.13.0",
