--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.19.33",
-    "@voxpelli/eslint-config": "^20.0.0-alpha2",
+    "@voxpelli/eslint-config": "^20.0.0-beta.3",
     "@voxpelli/tsconfig": "^8.0.0",
     "c8": "^8.0.0",
     "chai": "^4.3.7",
-    "eslint": "^9.3.0",
+    "eslint": "^9.5.0",
     "husky": "^8.0.3",
     "installed-check": "^7.1.1",
     "knip": "^2.13.0",
