--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "check": "run-s clean && run-p check:*",
     "clean:declarations": "rm -rf $(find . -maxdepth 2 -type f -name '*.d.ts*')",
     "clean": "run-p clean:*",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prepublishOnly": "run-s build",
     "test:mocha": "c8 --reporter=lcov --reporter text mocha 'test/**/*.spec.js'",
     "test-ci": "run-s test:*",
@@ -44,17 +44,17 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
+    "@types/mocha": "^10.0.7",
     "@types/node": "^18.19.39",
     "@voxpelli/eslint-config": "^20.0.0-beta.3",
     "@voxpelli/tsconfig": "^12.0.1",
-    "c8": "^8.0.0",
+    "c8": "^10.1.2",
     "chai": "^4.3.7",
     "eslint": "^9.5.0",
-    "husky": "^8.0.3",
-    "installed-check": "^7.1.1",
-    "knip": "^2.13.0",
-    "mocha": "^10.2.0",
+    "husky": "^9.0.11",
+    "installed-check": "^9.3.0",
+    "knip": "^5.22.3",
+    "mocha": "^10.5.1",
     "npm-run-all2": "^6.0.5",
     "type-coverage": "^2.29.0",
     "typescript": "~5.5.2"
